WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131656
Crash in TileController::tileRevalidationTimerFired
https://bugs.webkit.org/show_bug.cgi?id=131656
Summary
Crash in TileController::tileRevalidationTimerFired
Simon Fraser (smfr)
Reported
2014-04-14 18:36:15 PDT
Crash in TileController::tileRevalidationTimerFired
Attachments
Patch
(3.69 KB, patch)
2014-04-14 18:37 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-04-14 18:37:55 PDT
Created
attachment 229333
[details]
Patch
WebKit Commit Bot
Comment 2
2014-04-14 19:54:41 PDT
Comment on
attachment 229333
[details]
Patch Clearing flags on attachment: 229333 Committed
r167290
: <
http://trac.webkit.org/changeset/167290
>
WebKit Commit Bot
Comment 3
2014-04-14 19:54:44 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 4
2014-04-14 22:40:56 PDT
<
rdar://problem/16583166
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug